// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="csnjwq0 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cibap1r soui-radio-indicator-wrapper"
  >
    <span
      class="c-yp2wyk soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-q0fd44 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-oz42ng soui-radio-group c-3gydju soui-radio-group-button c-tle0f7 soui-button-group"
  dir="ltr"
>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked cxd12sg soui-button-primary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-oz42ng soui-radio-group c-3gydju soui-radio-group-button c-tle0f7 soui-button-group"
  dir="ltr"
>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked cxd12sg soui-button-primary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button ck9sx40 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-51npj0 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-oz42ng soui-radio-group c-3gydju soui-radio-group-button c-tle0f7 soui-button-group"
    dir="ltr"
  >
    <button
      class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked cxd12sg soui-button-primary c3nwsno soui-button-button c-tevyu3 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button c-tevyu3 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button c-tevyu3 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-oz42ng soui-radio-group c-3gydju soui-radio-group-button c-tle0f7 soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-oz42ng soui-radio-group c-3gydju soui-radio-group-button c-tle0f7 soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked cxd12sg soui-button-primary c3nwsno soui-button-button c-tixucn soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button c-tixucn soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="csnjwq0 soui-radio-wrapper c-s73lim soui-button-secondary c3nwsno soui-button-button c-tixucn soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="csnjwq0 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cibap1r soui-radio-indicator-wrapper"
  >
    <span
      class="c-yp2wyk soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-q0fd44 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
